--- a/OldSoftware/RF2/.vscode/settings.json
+++ b/OldSoftware/RF2/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "sstream": "cpp",
         "SORTN2.C": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
